<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/primary"
            android:text="@string/l_001"
            android:textColor="@color/icons" />

        <Button
            android:id="@+id/btnMaos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/primary"
            android:text="@string/m_001"
            android:textColor="@color/icons" />

        <Button
            android:id="@+id/btnBankroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/primary"
            android:text="@string/b_001"
            android:textColor="@color/icons" />

        <Button
            android:id="@+id/btnSobre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/primary"
            android:text="@string/s_001"
            android:textColor="@color/icons" />

    </LinearLayout>

    <com.google.android.gms.ads.NativeExpressAdView
        android:id="@+id/banner_native"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="280x250"
        ads:adUnitId="@string/admob_native_pequeno" />

</LinearLayout>


